--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -23,3 +23,27 @@
 .home-page{
     margin-top: 10%;
 }
+
+
+.gallery{
+    width: 80vw;
+    gap: 10px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-auto-flow: dense;
+}
+
+.imageItem{
+    display: flex;
+    align-items: center;
+  justify-content: center;
+}
+.imageItem > img{
+    /* width: auto;
+    max-width: 330px;
+    object-fit: contain;
+    object-position: center; */
+    max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
