--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -1,6 +1,6 @@
-.navigation-link{
+.navigation-link {
     border: 1px solid rgb(96, 95, 95);
-    font-size:small;
+    font-size: small;
     font-weight: 500;
     padding: 1vh 2vh;
     border-radius: 40px;
@@ -9,23 +9,27 @@
     text-align: center;
     display: inline-block;
 }
-.search-2{
+
+.search-2 {
     border-radius: 40px;
     padding: 1vh 4vh;
     box-shadow: 0px 0px 8px 8px #f5f3f3;
 }
-.search-1{
+
+.search-1 {
     border-radius: 40px;
     padding: 1vh 4vh;
     height: 40px;
+
     box-shadow: 0px 0px 8px 8px #f5f3f3;
 }
-.home-page{
+
+.home-page {
     margin-top: 10%;
 }
 
 
-.gallery{
+.gallery {
     width: 80vw;
     gap: 10px;
     display: grid;
@@ -33,17 +37,37 @@
     grid-auto-flow: dense;
 }
 
-.imageItem{
+.imageItem {
     display: flex;
     align-items: center;
-  justify-content: center;
+    justify-content: center;
 }
-.imageItem > img{
-    /* width: auto;
-    max-width: 330px;
-    object-fit: contain;
-    object-position: center; */
+
+.imageItem>img {
     max-width: 100%;
-  max-height: 100%;
-  object-fit: cover;
+    max-height: 100%;
+    object-fit: cover;
+}
+
+.positon-content {
+    margin-left: 15%;
+}
+
+.navigation-1 {
+    display: flex;
+    margin-left: 3%;
+    /* flex-wrap: wrap; */
+}
+
+@media screen and (max-width:700px) {
+    .positon-content {
+        margin-left: 4%;
+    }
+
+    .navigation-1 {
+        flex-direction: column;
+        align-items: center;
+        margin-left: auto;
+
+    }
 }
